--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -9,5 +9,10 @@
             Countries
         </a>
         <span class="separator"></span>
+
+        <a mat-flat-button color="primary" [routerLink]="['/login']">
+            Login
+        </a>
+        
     </mat-toolbar>
 </header>
