finshed the authication on the client side

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,18 +1,11 @@
 <header>
     <mat-toolbar color="primary">
         <button mat-icon-button [routerLink]="['/']">
-            <mat-icon>
-                home
-            </mat-icon>
+            <mat-icon>home</mat-icon>
         </button>
-        <a mat-flat-button color="primary" [routerLink]="['/countries']">
-            Countries
-        </a>
+  
+        <a mat-flat-button color="primary" [routerLink]="['/countries']">Countries</a>
+        <a mat-flat-button color="primary" [routerLink]="['/login']">Login</a>
         <span class="separator"></span>
-
-        <a mat-flat-button color="primary" [routerLink]="['/login']">
-            Login
-        </a>
-        
     </mat-toolbar>
-</header>
+</header> 
